--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -6,10 +6,10 @@
 	<groupId>com.dahirkanehl</groupId>
 	<artifactId>bleeter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
-	<name>bleeter</name>
-	<description>Bleeter app that allows users to login and post comments</description>
+	<name>Bleeter</name>
+	<description>app for posts and comments</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -31,14 +31,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
